[tool.poetry]
name = "asterdexvolume"
version = "0.1.0"
description = "AsterDex 增强交易系统 - 基于交易量和趋势分析的自动化交易机器人"
authors = ["Oxmoei <https://t.me/cryptostar210>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/oxmoei/AsterDexVolume"
repository = "https://github.com/oxmoei/AsterDexVolume"
keywords = ["trading", "bot", "cryptocurrency", "asterdex", "volume", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.0,<3.0.0"
websocket-client = ">=1.4.0,<2.0.0"
urllib3 = ">=1.26.0,<3.0.0"
pysocks = ">=1.7.1,<2.0.0"
web3 = ">=7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
asterdex-trader = "enhanced_volume_trader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=."
